feat: Adapt UI for safe area insets
Introduces support for safe area insets, specifically for the bottom of the screen. This ensures that UI elements, such as the floating action button and the bottom navigation bar, do not overlap with system elements like the home indicator on newer devices.

The `safe-area-inset-bottom` CSS variable is now used to dynamically adjust the layout, providing a better user experience on edge-to-edge displays.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         },
       }
     </script>
+  <style>
+    :root {
+      --sab: env(safe-area-inset-bottom, 0px);
+    }
+  </style>
   <script type="importmap">
 {
   "imports": {
