--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     :root {
       --sab: env(safe-area-inset-bottom, 0px);
     }
+    html, body, #root {
+      height: 100%;
+      margin: 0;
+      overflow: hidden;
+    }
   </style>
   <script type="importmap">
 {
@@ -56,7 +61,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-50 dark:bg-gray-900">
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
