--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
               'slide-up': 'slideUp 0.3s ease-out',
               'glow': 'glow 1.5s cubic-bezier(0.4, 0, 0.2, 1) forwards',
               'scale-in-up': 'scaleInUp 0.2s ease-out forwards',
+              'fade-in-out': 'fadeInOut 1s ease-in-out forwards',
             },
             keyframes: {
               fadeIn: {
@@ -35,6 +36,10 @@
               scaleInUp: {
                 '0%': { opacity: '0', transform: 'scale(0.9) translateY(10px)' },
                 '100%': { opacity: '1', transform: 'scale(1) translateY(0)' },
+              },
+              fadeInOut: {
+                '0%, 100%': { opacity: '0', transform: 'translateY(20px) scale(0.95)' },
+                '10%, 90%': { opacity: '1', transform: 'translateY(0) scale(1)' },
               },
             },
           },
